# Torch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  compile.bat  windows_build_debug.bat  windows_build_release.bat
assets/models/cube/: license.txt
assets/models/cube2/: license.txt  scene.gltf
assets/models/essential/sphere/: license.txt  scene.gltf
assets/models/monkey/: Suzanne.glb
assets/models/sphere/: license.txt  scene.gltf  sphere.glb
assets/models/stone/: license.txt  scene.gltf
assets/save/: example.rx  example.tc  shadow.tc  shadow2.tc
assets/shader/: DynamicLightingDataCompute.comp  atmosphere.frag  atmosphere.vert  downSample.comp  equiRectangle.frag  equiRectangle.vert  gemotryPass.frag  gemotryPass.vert  godRays.frag  hdr.frag  irradiance.frag  lightBloomFinal.frag  lightBufferShader.frag  lightIDShader.frag  lightShader.frag  lighting.frag  lightingPass.frag  outline.frag  outline.vert  prefilter.frag  shader.frag  shader.vert  shadowMapDepth.frag  shadowMapDepth.geom  shadowMapDepth.vert  skybox.frag  skybox.vert  ssao.frag  stencilOutlineColor.frag  stencilOutlineColor.vert  test.comp  test.frag  test.vert  upSample.comp  volumetricLighting.frag
assets/shadersaved/: skybox.frag  skybox2.frag
core/: CMakeLists.txt
core/events/: Event.h  EventDispatcher.h  Keyboard.cpp  Keyboard.h  KeyboardEvents.cpp  KeyboardEvents.h  Mouse.cpp  Mouse.h  MouseEvents.cpp  MouseEvents.h  WindowEvent.cpp  WindowEvent.h
core/glcore/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  IndexBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TorchModel.cpp  TorchModel.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
core/graphics/: TorchGraphicsContext.cpp  TorchGraphicsContext.h  TorchOpenGLContext.cpp  TorchOpenGLContext.h  TorchVulkanContext.cpp  TorchVulkanContext.h
core/platform/: ServiceLocator.cpp  ServiceLocator.h  TorchWindow.cpp  TorchWindow.h  Window.cpp  Window.h
core/renderer/: Component.cpp  Component.h  Entity.cpp  Entity.h  EnvironmenManager.cpp  EnvironmentManager.h  ModelManager.cpp  ModelManager.h  RenderCube.h  RenderQuad.cpp  RenderQuad.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
core/renderer/atmosphericScattering/: AtmosphericScattering.cpp  AtmosphericScattering.h
core/renderer/camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h
core/renderer/environment/: AtmosphericScattering.cpp  AtmosphericScattering.h  CascadeShadowMap.cpp  CascadeShadowMap.h  EnvironmentEntity.h  HDR.cpp  HDR.h  SSAO.cpp  SSAO.h  ShadowMap.cpp  ShadowMap.h
core/renderer/postprocess/: Bloom.cpp  Bloom.h  BloomRenderer.cpp  BloomRenderer.h  IBL.cpp  IBL.h  PostProcessEffect.h  PostProcessFactory.cpp  PostProcessFactory.h  SSAO.cpp  SSAO.h  VolumetricLighting.cpp  VolumetricLighting.h
core/renderer/skybox/: Skybox.h
core/vkcore/: LogicDevice.cpp  LogicDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  ValidationLayers.cpp  ValidationLayers.h  VulkanCommon.cpp  VulkanCommon.h  VulkanContext.h  VulkanInstance.cpp  VulkanInstance.h  VulkanObject.cpp  VulkanObject.h  VulkanUtils.cpp  VulkanUtils.h
core/vkcore/command/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h
core/vkcore/devices/: VulkanLogicDevice.cpp  VulkanLogicDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h
core/vkcore/framebuffer/: VulkanFramebuffer.cpp  VulkanFramebuffer.h
core/vkcore/imageviews/: VulkanImageViews.cpp  VulkanImageViews.h
core/vkcore/instance/: VulkanInstance.cpp  VulkanInstance.h
core/vkcore/pipeline/: VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h
core/vkcore/renderpass/: VulkanRenderPass.cpp  VulkanRenderPass.h
core/vkcore/surface/: VulkanWindowSurface.cpp  VulkanWindowSurface.h
core/vkcore/swapchain/: VulkanSwapChain.cpp  VulkanSwapChain.h
core/vkcore/syncobjects/: VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h
core/vkcore/validationlayer/: VulkanValidationLayers.cpp  VulkanValidationLayers.h
editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorModule.h  EntityPropertiesPanel.cpp  EntityPropertiesPanel.h  EnvironmentPropertiesPanel.cpp  EnvironmentPropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  Viewport.cpp  Viewport.h
engine/: CMakeLists.txt  Engine.cpp  Engine.h  Headers.h
engine/window/: TorchWindow.cpp  TorchWindow.h  Window.cpp  Window.h
pch/: pch.h
sandbox/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Logger.h  Ref.h  Serializer.cpp  Serializer.h  ServiceLocator.cpp  ServiceLocator.h  TemplateUtils.h  UUID.cpp  UUID.h
